# slm

./: .gitignore  .pre-commit-config.yaml  .typos.toml  README.md  conda-spec.txt  environment.yaml  pyproject.toml
docs/: Datasets_and_preprocessing.md
notebooks/: .gitignore  nonlinear_activations_investigation.html  nonlinear_activations_investigation.py  word2vec.py  word2vec_param_investigation.html  word2vec_param_investigation.py
scripts/: build_vocab.py  clean_data.py  w2v_build_vocab.py  w2v_clean_data.py
slm/: __init__.py  data.py  datasets.py  preprocess.py  utils.py
slm/data/: constants.py  preprocess.py  sentence_pretokenizer.py
slm/word2vec/: loaders.py  models.py  trainer.py  vocab.py
src/slm/: __init__.py  preprocess.py  utils.py
tests/: test_preprocess.py  test_utils.py  test_vocab.py
tests/data/: test_preprocess.py
tests/word2vec/: test_loaders.py
